@@ -32,11 +32,7 @@
   CodeCommentType _commentType;
   BOOL _stringBegin;
   NSMutableString *_symbols;
-#if 1
   NSString *_stringSymbol;
-#else
-  unichar _stringSymbol;
-#endif
   NSString *_commentSymbol;
 
   /* Token */
