@@ -2,6 +2,7 @@
 
 	* Use syntax definition for comment.
 	* Use syntax definition for string.
+	* Use syntax definition for keyword.
 
 2006-11-24 Yen-Ju Chen <yjchenx at gmail>
 
